--- a/index.html
+++ b/index.html
@@ -11,14 +11,68 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqcxXmUWXpt-iOujOro-aTZuIPcvpcyM&sensor=false">
     </script>
     <script type="text/javascript">
+      
+      var map;
+
       function initialize() {
         var mapOptions = {
           center: new google.maps.LatLng(59.345356, 17.909285),
           zoom: 14
         };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
+        map = new google.maps.Map(document.getElementById("map-canvas"),
             mapOptions);
+
+        draw();
       }
+
+      function draw() {
+        var triangleCoords = [
+        new google.maps.LatLng(59.346356, 17.909285),
+        new google.maps.LatLng(59.344356, 17.907285),
+        new google.maps.LatLng(59.344356, 17.911285),
+        new google.maps.LatLng(59.346356, 17.909285)
+        ];
+
+        // Construct the polygon.
+        bermudaTriangle = new google.maps.Polygon({
+          paths: triangleCoords,
+          strokeColor: '#FF0000',
+          strokeOpacity: 0.8,
+          strokeWeight: 2,
+          fillColor: '#FF0000',
+          fillOpacity: 0.35
+        });
+
+        bermudaTriangle.setMap(map);
+
+        triangleCoords = [
+        new google.maps.LatLng(59.346356, 17.909285),
+        new google.maps.LatLng(59.346356, 17.913285),
+        new google.maps.LatLng(59.344356, 17.911285),
+        new google.maps.LatLng(59.346356, 17.909285)
+        ];
+
+        bermudaTriangle2 = new google.maps.Polygon({
+          paths: triangleCoords,
+          strokeColor: '#00FF00',
+          strokeOpacity: 0.8,
+          strokeWeight: 2,
+          fillColor: '#00FF00',
+          fillOpacity: 0.35
+        });
+
+        bermudaTriangle2.setMap(map);
+      }
+
+      function getDistance(lat1, lng1, lat2, lng2)
+      {
+        // formula from http://www.movable-type.co.uk/scripts/latlong.html
+        var R = 6371; // km
+        var d = Math.acos(Math.sin(lat1)*Math.sin(lat2) + 
+                  Math.cos(lat1)*Math.cos(lat2) *
+                  Math.cos(lng2-lng1)) * R;
+      }
+
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
