Select destination in query parameter

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqcxXmUWXpt-iOujOro-aTZuIPcvpcyM&sensor=false">
     </script>
     <script type="text/javascript" src="js/lib/jquery/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/lib/purl/purl.js"></script>
     <script type="text/javascript" src="js/lib/rhill-voronoi/rhill-voronoi-core.min.js"></script>
     <script type="text/javascript" src="js/turf-voronoi.js"></script>
   </head>
