Centered player names

--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
       body { height: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100% }
       .labels {
-        color: black;
-        background-color: rgba(255,255,255,192);
+        width: 100px;
+        padding: 0px;
+        margin: 0px;
+        border-width: 0px;
+        text-align: center;
+      }
+      span.pname {
+        display: inline-block;
+        color: red;
+        background-color: rgba(0,0,0,192);
         font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
-        font-size: 10px;
+        font-size: 11px;
         font-weight: bold;
         text-align: center;
-        border: 0px solid rgba(0,0,0,128);
         border-radius: 5px;
-        padding: 1px;
+        padding: 1px 3px;
         white-space: nowrap;
       }
     </style>
