--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>TURF - Area of influence</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <link rel="icon" href="img/favicon.png" type="image/png" />
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
