--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100% }
+      #zone-info,#player-info
+      {
+        position: absolute;
+        background-color: rgba(0,0,0,0.5);
+        color: #eee;
+        padding-left: 1em;
+        border-left: 3px solid black;
+        border-right: 3px solid black;
+        border-bottom: 3px solid black;
+        z-index: 10000;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
+        font-size: 14px;
+      }
+      #zone-info {
+        left: 260px;
+        top: -4em;
+        width: 180px;
+        height: 3.5em;
+      }
+      #player-info {
+        left: 90px;
+        top: -3em;
+        width: 150px;
+        height: 2.5em;
+      }
       .labels {
         width: 100px;
         padding: 0px;
@@ -18,7 +45,7 @@
       span.pname {
         display: inline-block;
         color: red;
-        background-color: rgba(0,0,0,192);
+        background-color: rgba(0,0,0,0.9);
         font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
         font-size: 11px;
         font-weight: bold;
@@ -49,8 +76,8 @@
     <script type="text/javascript" src="js/turf-voronoi.js"></script>
   </head>
   <body>
-    <div id="map-canvas"/>
+    <div id="zone-info"></div>
+    <div id="player-info"></div>
+    <div id="map-canvas"></div>
   </body>
 </html>
-
-<!--   lat="59.345356" lng="17.909285"/>   -->
