--- a/index.html
+++ b/index.html
@@ -55,16 +55,6 @@
         white-space: nowrap;
       }
     </style>
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-49779600-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <!-- End Google Analytics -->
 
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqcxXmUWXpt-iOujOro-aTZuIPcvpcyM&sensor=false">
@@ -74,6 +64,19 @@
     <script type="text/javascript" src="js/lib/rhill-voronoi/rhill-voronoi-core.min.js"></script>
     <script type="text/javascript" src="js/lib/markerwithlabel/markerwithlabel_packed.js"></script>
     <script type="text/javascript" src="js/turf-voronoi.js"></script>
+
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-49779600-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <!-- End Google Analytics -->
   </head>
   <body>
     <div id="zone-info"></div>
