--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>TURF - Area of influence</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="icon" href="img/favicon.png" type="image/png" />
     <style type="text/css">
@@ -17,7 +18,7 @@
         border-left: 3px solid black;
         border-right: 3px solid black;
         border-bottom: 3px solid black;
-        z-index: 10000;
+        z-index: 100;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
