--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="icon" href="img/favicon.png" type="image/png" />
     <style type="text/css">
       html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
       a {color: #ddd;}
       #map-canvas { height: 100% }
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
+      }
       #zone-info,#player-info
       {
         position: absolute;
@@ -22,7 +27,6 @@
         z-index: 100;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
-        font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
         font-size: 14px;
       }
       #player-info {
@@ -73,7 +77,6 @@
         top: 3.5em;
         margin-left: -25%;
         margin-top: 4px;
-        font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
         font-size: 14px;
         background-color: rgba(0,0,0,0.7);
         color: #eee;
@@ -90,7 +93,6 @@
         display: inline-block;
         color: red;
         background-color: rgba(0,0,0,0.9);
-        font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
         font-size: 11px;
         font-weight: bold;
         text-align: center;
