--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
       img.icon {
         width: 32px;
         height: 32px;
+      div.close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background-color: rgba(255,255,255,0.6);
+        border-radius: 6px;
+      }
       }
       #info
       {
@@ -130,7 +137,8 @@
     <div id="map-canvas"></div>
     <div id="icon-panel"> 
       <!--div id="search_icon" class="icon" onClick='toggleSearch(); return false;'><img src="img/search_icon.png" class="icon"></div-->
-      <div id="info_icon" class="icon" onClick='toggleInfo(); return false;'><img src="img/info_icon.png" class="icon"></div>    </div>
+      <div id="info_icon" class="icon" onClick='toggleInfo(); return false;'><img src="img/info_icon.png" class="icon"></div>
+    </div>
     <div id="info">
       <p><center><b>Turf - Area Of Influence</b></center></p>
       <p>A visual representation of the excellent GPS game, <a href="http://turfgame.com" target="_blank">Turf</a>.</p>
@@ -146,6 +154,10 @@
       <p><b>Attribution</b></p>
       <p>Made by Sarastro (Mattias Bäcklund)</p>
       <p>The source code is <a href="https://github.com/Sarastro72/turf-aoi" target="_blank">avaliable on github</a>, where you can also report issues or come with feature requests</p>
+      <div class="icon close" onClick='toggleInfo(); return false;'><img src="img/close.png" class="icon"></div>
+    </div>
+    <div id="search">
+      <input name="location" type="text" />
     </div>
   </body>
 </html>
