--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
         float: left;
         padding: 0px;
         margin: 0px;
-        height: 32px;
+        height: 24px;
         cursor: pointer;
       }
       img.icon {
-        width: 32px;
-        height: 32px;
+        width: 24px;
+        height: 24px;
+      }
       div.close {
         position: absolute;
         top: 10px;
@@ -68,9 +69,7 @@
         background-color: rgba(255,255,255,0.6);
         border-radius: 6px;
       }
-      }
-      #info
-      {
+      #info {
         display: none;
         position: absolute;
         width: 50%;
@@ -79,7 +78,7 @@
         padding: 1em;
         border: 3px solid black;
         border-radius: 10px;
-        z-index: 200;
+        z-index: 100;
         left: 50%;
         top: 3.5em;
         margin-left: -25%;
