--- a/index.html
+++ b/index.html
@@ -5,108 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="icon" href="img/favicon.png" type="image/png" />
-    <style type="text/css">
-      html { height: 100% }
-      a {color: #ddd;}
-      #map-canvas { height: 100% }
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: "Helvetica", "Lucida Grande", "Arial", sans-serif;
-      }
-      #zone-info,#player-info
-      {
-        position: absolute;
-        background-color: rgba(0,0,0,0.5);
-        color: #eee;
-        padding-left: 1em;
-        border-left: 3px solid black;
-        border-right: 3px solid black;
-        border-bottom: 3px solid black;
-        z-index: 100;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        font-size: 14px;
-      }
-      #player-info {
-        left: 90px;
-        top: -3em;
-        width: 150px;
-        height: 2.5em;
-      }
-      #zone-info {
-        left: 258px;
-        top: -4em;
-        width: 180px;
-        height: 3.5em;
-      }
-      #icon-panel {
-        position: absolute;
-        top: 0px;
-        left: 460px;
-        padding: 2px;
-        margin: 0px;
-        margin-top: 2px;
-        background-color: rgba(255,255,255,0.7);
-        border-radius: 3px;
-      }
-      div.icon {
-        float: left;
-        padding: 0px;
-        margin: 0px;
-        height: 24px;
-        cursor: pointer;
-      }
-      img.icon {
-        width: 24px;
-        height: 24px;
-      }
-      div.close {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        background-color: rgba(255,255,255,0.6);
-        border-radius: 6px;
-      }
-      #info {
-        display: none;
-        position: absolute;
-        width: 50%;
-        max-width: 450px;
-        max-height: 450px;
-        padding: 1em;
-        border: 3px solid black;
-        border-radius: 10px;
-        z-index: 100;
-        left: 50%;
-        top: 3.5em;
-        margin-left: -25%;
-        margin-top: 4px;
-        font-size: 14px;
-        background-color: rgba(0,0,0,0.7);
-        color: #eee;
-        overflow: auto;
-      }
-      .labels {
-        width: 100px;
-        padding: 0px;
-        margin: 0px;
-        border-width: 0px;
-        text-align: center;
-      }
-      span.pname {
-        display: inline-block;
-        color: red;
-        background-color: rgba(0,0,0,0.9);
-        font-size: 11px;
-        font-weight: bold;
-        text-align: center;
-        border-radius: 5px;
-        padding: 1px 3px;
-        white-space: nowrap;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="turf-aoi.css">
 
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqcxXmUWXpt-iOujOro-aTZuIPcvpcyM&sensor=true">
