Added Web Of Trust verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>TURF - Area of influence</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta name="wot-verification" content="93f20164b0f3fb6f8fc1"/>
     <link rel="icon" href="img/favicon.png" type="image/png" />
     <link rel="stylesheet" type="text/css" href="turf-aoi.css">
     <link rel="stylesheet" type="text/css" href="turf-aoi-mobile.css">
