Very basic log panel

--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
       <b>Go to:</b><br>
       <input id="searchField" name="location" type="text" />
     </div>
+    <div id="log"></div>
   </body>
 </html>
