LogPanel is working but no cleanup of old logs.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="js/lib/purl/purl.js"></script>
     <script type="text/javascript" src="js/lib/rhill-voronoi/rhill-voronoi-core.min.js"></script>
     <script type="text/javascript" src="js/lib/markerwithlabel/markerwithlabel_packed.js"></script>
+    <script type="text/javascript" src="js/lib/isotope/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="js/turf-voronoi.js"></script>
 
     <!-- Google Analytics -->
@@ -60,6 +61,6 @@
       <b>Go to:</b><br>
       <input id="searchField" name="location" type="text" />
     </div>
-    <div id="log"></div>
+    <div id="logPanel"><div id="logArea"></div></div>
   </body>
 </html>
