--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div id="icon-panel"> 
       <div id="search_icon" class="icon" onClick='toggleSearch(); return false;'><img src="img/search_icon.png" class="icon"></div>
       <div id="info_icon" class="icon" onClick='toggleInfo(); return false;'><img src="img/info_icon.png" class="icon"></div>
+      <div id="log_icon" class="icon" onClick='toggleLog(); return false;'><img src="img/log_icon.png" class="icon"></div>
     </div>
     <div id="info">
       <p><center><b>Turf - Area Of Influence</b></center></p>
