Log panel hidden by default Log button hidden on small devices Started refactoring addTake for optimisation

--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
       <b>Go to:</b><br>
       <input id="searchField" name="location" type="text" />
     </div>
-    <div id="logPanel"><div id="logArea"></div></div>
+    <div id="log-panel"><div id="log-area"></div></div>
   </body>
 </html>
