--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </script>
     <script type="text/javascript" src="js/lib/jquery/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/lib/purl/purl.js"></script>
+    <script type="text/javascript" src="js/lib/moment/moment.min.js"></script>
     <script type="text/javascript" src="js/lib/rhill-voronoi/rhill-voronoi-core.min.js"></script>
     <script type="text/javascript" src="js/lib/markerwithlabel/markerwithlabel_packed.js"></script>
     <script type="text/javascript" src="js/lib/isotope/isotope.pkgd.min.js"></script>
