Remove deprecated parameter

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="turf-aoi-mobile.css">
 
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqcxXmUWXpt-iOujOro-aTZuIPcvpcyM&sensor=true">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqcxXmUWXpt-iOujOro-aTZuIPcvpcyM">
     </script>
     <script type="text/javascript" src="js/lib/jquery/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/lib/purl/purl.js"></script>
