Rename to Turf Areas

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TURF - Area of influence</title>
+    <title>TURF Areas</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta name="wot-verification" content="93f20164b0f3fb6f8fc1"/>
@@ -43,20 +43,20 @@
       <div id="log_icon" class="icon" onClick='toggleLog(); return false;'><img src="img/log_icon.png" class="icon"></div>
     </div>
     <div id="info">
-      <p><center><b>Turf - Area Of Influence</b></center></p>
+      <p><center><b>Turf - Areas</b></center></p>
       <p>A visual representation of the excellent GPS game, <a href="http://turfgame.com" target="_blank">Turf</a>.</p>
       <p><b>Method</b></p>
       <p>The turf zones are expanded to fill the whole map. Each player is assigned a color based on the players name. Each
         zone takes the color of its owner. Borders are drawn between zones that have different owners. This way
         we get a map that represents the players areas of ownership, or Area of Influence.</p>
       <p><b>Usage</b></p>
-      <p>Turf AOI shows a live representation of the game, players are visible as they play and the map is updated when a zone
+      <p>Turf Areas shows a live representation of the game, players are visible as they play and the map is updated when a zone
         is taken. As you move the mouse over the zones on the map, a zone info tab shows information for the current zone. You can click on a player or on a zone marker to select that player. The zones of the selected player are highlighted with extra thick borders.</p>
       <p><b>Keep in touch</b></p>
-      <p>Follow <a href="https://twitter.com/TurfAOI" target="_blank">TurfAOI on Twitter</a> to keep track of updates or come with suggestions or shouts of encouragement (or complaints if you must)</p>
+      <p>Follow <a href="https://twitter.com/TurfAOI" target="_blank">Turf Areas on Twitter</a> to keep track of updates or come with suggestions or shouts of encouragement (or complaints if you must)</p>
       <p><b>Attribution</b></p>
       <p>Made by Sarastro (Mattias Bäcklund)</p>
-      <p>The source code is <a href="https://github.com/Sarastro72/turf-aoi" target="_blank">avaliable on github</a>, where you can also report issues or come with feature requests</p>
+      <p>The source code is <a href="https://github.com/Sarastro72/turf-areas" target="_blank">avaliable on github</a>, where you can also report issues or come with feature requests</p>
       <div class="icon close" onClick='toggleInfo(); return false;'><img src="img/close.png" class="icon"></div>
     </div>
     <div id="search">
